--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <%= csrf_meta_tags %>
+    <head>
+        <title></title>
+        <%= csrf_meta_tags %>
+        <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1' />
+        <meta charset='utf-8' />
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-  </head>
+        <script defer src='https://use.fontawesome.com/releases/v5.0.8/js/all.js'></script>
+        <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
 
-  <body>
-    <div id="root"></div>
+        <link type='text/css' href='/material-components-web.min.css' rel='stylesheet' />
+        <%= stylesheet_link_tag    'application', media: 'all' %>
+    </head>
 
-    <%= yield %>
+    <body>
+        <div id='root'></div>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-  </body>
+        <%= yield %>
+
+        <script src='/material-components-web.min.js'></script>
+    </body>
 </html>
