Styling on navbar and footer

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -24,8 +24,12 @@ body, #root {
     width: 100%;
 }
 
-.content {
+.content-wrapper {
     display: table-cell;
+}
+
+.content {
+    margin: 3%;
 }
 
 .content-5 {
