Sign out button on navbar

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -99,3 +99,12 @@ body, #root {
     color: white;
     text-decoration: none;
 }
+
+.unstyled-link-black {
+    color: #212121;
+    text-decoration: none;
+}
+
+.unstyled-link-black:hover {
+    color: #757575;
+}
