--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -17,11 +17,19 @@
 }
 
 .footer {
-    padding-top: 1%;
+    background-color: white;
+    height: 60px;
+    z-index: 99;
+
+    margin-top: -61px; // 1 extra pixel for top border
 
     border: 0px solid;
     border-top-width: 1px;
     border-color: #E0E0E0;
 
     text-align: center;
+}
+
+.footer-content {
+    padding-top: 1%;
 }
