Add show views for sign ups and messages

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -110,6 +110,10 @@ body, #root {
     color: #666666;
 }
 
+.link-no-hover:hover {
+    color: initial;
+}
+
 .right-form-button {
     float: right;
 }
