--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -31,10 +31,16 @@ body, #root {
 
 .content {
     margin: 3%;
+    margin-bottom: 81px; // Footer has a negative top margin of 61px so got to counter that
 
     @media (max-width: $mobile-width) {
         margin-top: 10vh;
     }
+}
+
+.content-2 {
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 .content-5 {
