--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -38,6 +38,11 @@ body, #root {
     }
 }
 
+.content-1 {
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
 .content-2 {
     margin-left: 2%;
     margin-right: 2%;
