Add delete buttons and placeholder edit buttons

--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -19,3 +19,18 @@
 .xyz--inverted {
     color: white;
 }
+
+.resource-actions {
+    margin-left: 1%;
+}
+
+.resource-actions-item {
+    display: inline-block;
+}
+
+.resource-actions-spacer {
+    display: inline-block;
+
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+}
