--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -34,3 +34,11 @@
     margin-left: 0.5%;
     margin-right: 0.5%;
 }
+
+.resource-list-item {
+    height: 70px;
+}
+
+.resource-list-item--dense {
+    height: 60px;
+}
