--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -107,6 +107,10 @@ body, #root {
     transform: translate(0, -50%);
 }
 
+.link {
+    display: inline-block;
+}
+
 .link:visited {
     color: blue;
 }
