--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
         <link type='text/css' href='/material-components-web.min.css' rel='stylesheet' />
         <%= stylesheet_link_tag    'application', media: 'all' %>
+
+        <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
     </head>
 
     <body>
