--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
         <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1' />
         <meta charset='utf-8' />
 
+        <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+
         <script defer src='https://use.fontawesome.com/releases/v5.0.8/js/all.js'></script>
         <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
 
