--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -36,7 +36,7 @@
     min-height: 59px;
     padding-bottom: 1px;
 
-    color: #212121;
+    color: $text-black;
     background-color: #FFFFFF;
 
     border: 0px solid;
