--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -1,3 +1,5 @@
+$grey-border: rgb(148, 148, 148);
+
 .editor {
     margin-top: 3%;
     margin-bottom: 3%;
@@ -6,7 +8,7 @@
 }
 
 .editor-wrapper {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .editor-editor {
@@ -22,7 +24,7 @@
 }
 
 .editor-toolbar {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid $grey-border;
 
     font-weight: 300;
 }
@@ -30,7 +32,7 @@
 // react-draft-wsysiwyg styling
 
 .rdw-option-wrapper {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-option-wrapper:hover {
@@ -38,7 +40,7 @@
 }
 
 .rdw-dropdown-wrapper {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-dropdown-wrapper:hover {
@@ -46,7 +48,7 @@
 }
 
 .rdw-link-modal-btn {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-link-modal-btn:hover {
@@ -54,11 +56,11 @@
 }
 
 .rdw-link-modal-input {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-embedded-modal-btn {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-embedded-modal-btn:hover {
@@ -66,7 +68,7 @@
 }
 
 .rdw-image-modal-btn {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-image-modal-btn:hover {
@@ -74,9 +76,9 @@
 }
 
 .rdw-image-modal-url-input {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
 
 .rdw-image-modal-size-input {
-    border: 1px solid grey;
+    border: 1px solid $grey-border;
 }
