--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -20,6 +20,11 @@ body, #root {
     top: 0;
 }
 
+.fullpage {
+    width: 100vw;
+    height: 100vh;
+}
+
 .content-root {
     display: table;
     width: 100%;
@@ -108,6 +113,14 @@ body, #root {
     transform: translate(0, -50%);
 }
 
+.middle-center {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    margin-right: -50%;
+}
+
 .link {
     display: inline-block;
 
@@ -129,7 +142,7 @@ body, #root {
 }
 
 .unstyled-link-black:hover {
-    color: #666666;
+    color: $purple-light
 }
 
 .link-no-hover:hover {
@@ -151,4 +164,8 @@ body, #root {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%)
+}
+
+.textfield {
+    width: 40%;
 }
