--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -48,10 +48,9 @@
     min-width: 50%;
     min-height: 40%;
 
-    padding: 1%;
+    padding: 2%;
     padding-top: 2%;
-    padding-left: 1.5%;
-    padding-right: 1.5%;
+    padding-bottom: 2%;
 
     border: 1px solid lighten($grey-border, 20%);
     border-radius: 2px;
