Add pagers to lists

--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -67,3 +67,21 @@
 .sk-circle .sk-child:before {
     background-color: $purple-light;
 }
+
+.pager-wrapper {
+    width: 100%;
+}
+
+.pager {
+    text-align: center;
+}
+
+.pager-control {
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+.pager-item {
+    margin-left: 1%;
+    margin-right: 1%;
+}
