--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
         <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
 
         <link type='text/css' href='/material-components-web.min.css' rel='stylesheet' />
+        <link type='text/css' href='/react-day-picker.css' rel='stylesheet' />
         <link type='text/css' href='/spinkit.css' rel='stylesheet' />
         <link type="text/css" href="/react-draft-wysiwyg.css" rel="stylesheet" />
         <%= stylesheet_link_tag    'application', media: 'all' %>
