Give superusers the ability to switch to different campaigns

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -3,6 +3,10 @@
 $mdc-theme-primary: $purple-primary;
 $mdc-theme-secondary: $purple-primary;
 
+.mdc-toolbar__title {
+    font-weight: 300;
+}
+
 .mdc-text-field__input {
     font-weight: 300;
 }
