Add state dropdown

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -31,6 +31,14 @@ $mdc-theme-secondary: $purple-primary;
     font-weight: 300;
 }
 
+.mdc-select {
+    padding-bottom: 3px;
+}
+
+.mdc-select .mdc-line-ripple {
+    margin-bottom: 3px;
+}
+
 .mdc-select__native-control {
     font-weight: 300;
 }
