Add finance overview

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -43,4 +43,8 @@ $mdc-theme-secondary: $purple-primary;
     font-weight: 300;
 }
 
+.mdc-typography--subtitle1 {
+    font-size: 18px !important;
+}
+
 @import '@material/theme/mdc-theme';
