--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -31,9 +31,11 @@ $mdc-theme-secondary: $purple-primary;
     font-weight: 300;
 }
 
-.mdc-select__native-control {
-    padding-bottom: 8px !important;
-    
+.mdc-select {
+    padding-bottom: 3px;
+}
+
+.mdc-select__native-control {    
     font-weight: 300;
 }
 
