Bug fixes + create reports with data/report class

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -35,6 +35,10 @@ $mdc-theme-secondary: $purple-primary;
     padding-bottom: 3px;
 }
 
+.mdc-select .mdc-line-ripple {
+    margin-bottom: 3px;
+}
+
 .mdc-select__native-control {    
     font-weight: 300;
 }
