--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -121,6 +121,13 @@ body, #root {
     margin-right: -50%;
 }
 
+.center {
+    position: absolute;
+    transform: translate(-50%, 0%);
+    left: 50%;
+    margin-right: -50%;
+}
+
 .link {
     display: inline-block;
 
