--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -65,6 +65,28 @@
     }
 }
 
+.sign-up-box {
+    min-width: 70%;
+    min-height: 40%;
+
+    padding: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+
+    border: 1px solid lighten($grey-border, 20%);
+    border-radius: 2px;
+
+    -moz-box-shadow:    2px 2px 2px 0px lighten($grey-border, 30%);
+    -webkit-box-shadow: 2px 2px 2px 0px lighten($grey-border, 30%);
+    box-shadow:         2px 2px 2px 0px lighten($grey-border, 30%);
+
+    @media (max-width: $mobile-width) {
+        min-width: 90%;
+    }
+}
+
 .sk-circle .sk-child:before {
     background-color: $purple-light;
 }
