--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -217,3 +217,16 @@
 .chartjs-render-monitor {
     max-width: 800px;
 }
+
+.add-fab-link {
+    position: fixed !important;
+    bottom: 2%;
+    right: 2%;
+
+    z-index: 10;
+}
+
+.add-fab {
+    width: 50px;
+    height: 50px;
+}
