--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -175,7 +175,7 @@ body, #root {
     position: absolute;
     top: 50%;
 
-    width: 200px;
+    width: 60vw;
     
     transform: translate(0, -50%)
 }
