--- a/app/assets/stylesheets/miscellaneous.scss
+++ b/app/assets/stylesheets/miscellaneous.scss
@@ -230,3 +230,7 @@
     width: 50px;
     height: 50px;
 }
+
+.checklist .mdc-checkbox__native-control:checked + .mdc-checkbox__background {
+    background-color: $purple-primary !important;
+}
