--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -32,7 +32,12 @@ $mdc-theme-secondary: $purple-primary;
 }
 
 .mdc-select {
+    max-height: 50px;
     padding-bottom: 3px;
+}
+
+.mdc-select__native-control {
+    padding-bottom: 10px;
 }
 
 .mdc-select .mdc-line-ripple {
